# Inscribe

./: .gitignore  Procfile  Vagrantfile  contributors.md  download-data.py  middlewares.py  mixins.py  pyproject.toml  requirements.txt  sentiment_analysis.py
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0003_auto_20210121_2039.py  0004_auto_20210121_2059.py
accounts/static/accounts/css/: customuser_detail.css  customuser_list.css
accounts/static/accounts/js/: customuser_detail.js
accounts/templates/accounts/: customuser_detail.html  customuser_form.html  customuser_list.html  customuserfollowers_list.html  customuserfollowing_list.html  login.html  logout.html  password-change-done.html  password-change.html  profile.html  register.html
bookmarks/: models.py
data/blogs/: Great battle.txt  Thinking leader.txt  american.txt  carrer.txt  diptesh.txt  manisha.txt
home/: urls.py  views.py
home/management/commands/: createdata.py  loadblogs.py
home/static/home/css/: discover.css  index.css  playground.css
home/static/home/js/: index.js  playground.js
home/templates/home/: discover.html  faq.html  index.html  playground.html
inscribe/: settings.py  urls.py
inscribe/static/css/: base.css
inscribe/templates/: base.html
inscribe/templates/includes/: messages.html  navbar-toggler.html  navbar.html
notes/: admin.py  forms.py  models.py  sentiment_analysis.py  urls.py  views.py
notes/migrations/: 0003_note_slug.py  0004_auto_20210122_1340.py  0005_auto_20210123_1443.py  0006_auto_20210123_1938.py  0006_comments.py  0007_merge_20210124_1331.py  0008_auto_20210126_1824.py  0009_note_description.py  0010_auto_20210201_1840.py
notes/static/notes/css/: create.css  detail.css
notes/static/notes/js/: detail.js
notes/templates/notes/: bookmarks.html  comments.html  create.html  detail.html  drafts.html  list.html  private.html  public.html  report.html  update.html
tools/: run-dev
tools/Vagrant/: bootstrap  setup-deps
tools/shell/: env-vars
