[tool.poetry]
name = "inscribe"
version = "0.1.0"
description = "A web based note taking app"
authors = ["IgnisDa <ignisda2002@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = {extras = ["argon2"], version = "^3.1.4"}
validate_email = "^1.3"
django-crispy-forms = "^1.10.0"
django-markdownx = "^3.0.1"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
whitenoise = "^5.2.0"
psycopg2-binary = "^2.8.6"
pandas = "^1.2.2"
textblob = "^0.15.3"
Markdown = "^3.3.3"
beautifulsoup4 = "^4.9.3"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.10.1"
pytest-flake8 = "^1.0.6"
pytest = "^6.1.2"
flake8 = "^3.8.4"
commitizen = "^2.11.0"
pytest-django = "^4.1.0"
django-extensions = "^3.1.0"
black = {version = "^20.8b1", allow-prereleases = true}
Faker = "^5.6.1"
mdgen = "^0.1.7"
jupyterlab = "^3.0.7"
Werkzeug = "^1.0.1"
httpie = "^2.4.0"
mypy = "^0.800"
rope = "^0.18.0"

[tool.black]
line-length = 89

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
